style.css
/* ... */
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: var(--main-font-family);
	user-select: none;
}

:root {
	/* Default font */
	--main-font-family: "poppins", "Poppins", sans-serif;

	/* 🔵🔵🔵 */
	/* ⚠️ Please don't change the color value or names for Blue (if ? modifying code would be difficult */
	--bg-color-blue: #bbd6fd;
	--accentLightTint-blue: #e2eeff;
	--darkerColor-blue: #3569b2;
	--darkColor-blue: #4382ec;
	--textColorDark-blue: #1b3041;
	--whitishColor-blue: #ffffff;

	/* 🔴🔴🔴 */
	--bg-color-red: #fdbdbd;
	--accentLightTint-red: #ffe7e7;
	--darkerColor-red: #b23535;
	--darkColor-red: #ec4343;
	--textColorDark-red: #411b1b;
	--whitishColor-red: #ffffff;

	/* 🟡🟡🟡 */
	--bg-color-yellow: #ffed80;
	--accentLightTint-yellow: #fff6c3;
	--darkerColor-yellow: #ae9502;
	--darkColor-yellow: #d1a93d;
	--textColorDark-yellow: #2f2707;
	--whitishColor-yellow: #ffffff;

	/* 🟢🟢🟢 */
	--bg-color-green: #c7e4c7;
	--accentLightTint-green: #e1f1e1;
	--darkerColor-green: #458245;
	--darkColor-green: #5cba5c;
	--textColorDark-green: #1b411b;
	--whitishColor-green: #ffffff;

	/* 🌊 Cyan */
	--bg-color-cyan: #9cefef;
	--accentLightTint-cyan: #d5ffff;
	--darkerColor-cyan: #07787f;
	--darkColor-cyan: #09b2b4;
	--textColorDark-cyan: #08354b;
	--whitishColor-cyan: #ffffff;

	/* 🩷💗🩷 */
	--bg-color-pink: #f9c8d6;
	--accentLightTint-pink: #ffebf2;
	--darkerColor-pink: #b24b64;
	--darkColor-pink: #ec5e78;
	--textColorDark-pink: #411b28;
	--whitishColor-pink: #ffffff;

	/* 🟠🟠🟠 */
	--bg-color-orange: #ffd8b2;
	--accentLightTint-orange: #ffedd5;
	--darkerColor-orange: #b26d3e;
	--darkColor-orange: #ec844d;
	--textColorDark-orange: #412b1e;
	--whitishColor-orange: #ffffff;

	/* 🟣🟣🟣 */
	--bg-color-purple: #dac2e8;
	--accentLightTint-purple: #e9e2f3;
	--darkerColor-purple: #724b8f;
	--darkColor-purple: #9563b5;
	--textColorDark-purple: #2d1b3e;
	--whitishColor-purple: #ffffff;

	/* ⚪ Silver */
	--bg-color-silver: #c6c6c6;
	--accentLightTint-silver: #e5e5e5;
	--darkerColor-silver: #6f6f6f;
	--darkColor-silver: #9e9e9e;
	--textColorDark-silver: #333333;
	--whitishColor-silver: #ffffff;

	/* 🟤🟤🟤 */
	--bg-color-brown: #dfc28d;
	--accentLightTint-brown: #eae3c9;
	--darkerColor-brown: #4e3930;
	--darkColor-brown: #705347;
	--textColorDark-brown: #16100d;
	--whitishColor-brown: #ffffff;

	/* 🫶🏻 Peach */
	--bg-color-peach: #ffccbf;
	--accentLightTint-peach: #fdf1ef;
	--darkerColor-peach: #f67455;
	--darkColor-peach: #9c29ba;
	--textColorDark-peach: #441730;
	--whitishColor-peach: #ffffff;

	/* ⚫⚫⚫ */
	--bg-color-dark: #171615;
	--accentLightTint-dark: #3c3c3c;
	--darkerColor-dark: #eeeeee;
	--darkColor-dark: #212121;
	--textColorDark-dark: #d6d6d6;
	--whitishColor-dark: #cccccc;

	/* ----------------- */

	/* Global variables */
	--gap: 30px;
	--round: 30px;
	--transparency: 90%;

	/* Shortcut bar */
	--max-shortcut-bar-width: 60vw;
	--shortcut-bar-gap-and-padding: 10px;
	--shortcut-size: 50px;
	--always-show-dock-background: 0;

	/* standard: Smooth start and end */
	--md-motion-ease: cubic-bezier(0.4, 0, 0.2, 1);
	/* entering: Fast start, slow end (Snappy opening, glides to stop) */
	--md-motion-decelerate: cubic-bezier(0, 0, 0.2, 1);
	/* exiting: Slow start, fast end (Pushes out quickly at the end) */
	--md-motion-accelerate: cubic-bezier(0.4, 0, 1, 1);
}

/* Theme */
/* ⚫🟣🔵🔴🟡🟢🟠⚪ */

.accentColor {
	fill: var(--darkColor-blue);
}

.bgLightTint {
	fill: var(--accentLightTint-blue);
	background-color: var(--accentLightTint-blue);
}

.lessDark {
	background-color: var(--bg-color-blue);
	fill: var(--bg-color-blue);
}

body[data-bg="wallpaper"] .menuBar .accentColor,
body[data-bg="wallpaper"] #shortcuts-section .accentColor {
	fill: var(--darkColor-blue);
}

body[data-bg="wallpaper"] .bgLightTint:not(.notTargeted) {
	fill: color-mix(
		in srgb,
		var(--accentLightTint-blue) var(--transparency),
		transparent
	);
	background-color: color-mix(
		in srgb,
		var(--accentLightTint-blue) var(--transparency),
		transparent
	);
}

.shortcutLogoContainer .bgLightTint {
	fill: var(--accentLightTint-blue) !important;
}

body[data-bg="wallpaper"] .lessDark.targeted {
	fill: color-mix(
		in srgb,
		var(--bg-color-blue) calc(var(--transparency) * 1.5),
		transparent
	);
}

/* ⚫🟣🟡🔵🔴🟠⚪🟢 */

html {
	height: 100%;
	width: 100%;
	margin: 0;
	scrollbar-width: none; /* For Firefox */
}

.html::-webkit-scrollbar {
	display: none;
}

body {
	background-color: var(--bg-color-blue);
	color: var(--textColorDark-blue);
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	min-height: 100vh;
	overflow: auto;
	background-image: var(--bg-image, none);
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	background-attachment: fixed;
	height: 100%; /* Ensure the image fits the viewport height */
	margin: 0;
}

/* Apply dark mode when: Dark Mode is selected manually, OR System Theme is selected */
html:has(body[data-bg="color"] .menuBar .themeSegment[data-active="dark"]):not(
		:has(#darkTheme:checked)
	),
html:has(
		body[data-bg="color"][sysTheme="systemDark"]
			.menuBar
			.themeSegment[data-active="system"]
	):not(:has(#darkTheme:checked)) {
	filter: invert(1) hue-rotate(180deg);
	-webkit-filter: invert(1) hue-rotate(180deg);

	& #darkTheme,
	& .favicon {
		filter: invert(1) hue-rotate(180deg);
		-webkit-filter: invert(1) hue-rotate(180deg);
	}

	& .menuBar,
	& #bookmarksContainer {
		background-color: #0000000f;
	}

	& #prompt-modal-blur,
	& .ai-modal-overlay {
		background-color: #ffffff5f;
	}

	--whitishColor-blue: #f2f2f2;
}
/* ... */

